# fastapi-tpl

./: .env.template  README.md  main.py  pyproject.toml
.github/workflows/: format-and-lint.yaml  format-and-lint.yml
src/api/: deps.py
src/api/v1/: routes.py
src/api/v1/endpoints/: users.py
src/core/: config.py
src/crud/: user.py
src/database/: session.py
src/models/: base.py  user.py
